--- a/K8.md
+++ b/K8.md
@@ -3,9 +3,9 @@
   It Open Source Project from Google and supporte on all cloud providers.
 
 ## Architecture
-  Master Node
-  Worker Node
-  Compenents
+ * Master Node
+ * Worker Node
+ * Compenents
     * API Server - Front End. Users,CLI,Management Device all talk to API Server to intract with Kubernetes Cluster.
     * etcd - Distributed Key value Store. It used to all the information about Master and Cluster and store it all the Nodes on the cluster. It is also used to Implement lock which is used to avoid conflict.
     * kubelet - Agent running on each Node and make sure container are running as excepted.
@@ -18,11 +18,9 @@
        * kubelet cluster-info
 
 ## Installation	
-   * utility:-
+   * Utility:-
       * minikube - It is used to setup on kubernetes on Single Node Cluster. i.e if we want to run all the components on Single Server.
-      * kubeadm 
-	  * It is used to setup Kubernetes on multi Node Cluster.
-	  * It is used to bootstrap Kubernetes Cluster Installtion.
+      * kubeadm - It is used to setup Kubernetes on multi Node Cluster and also used to bootstrap Kubernetes Cluster Installtion.
 
       * Steps
 	* 1)Desiginate Master and Worker Node.
@@ -32,22 +30,25 @@
 	* 5)Verify N/W Connectivity between all the nodes. Need Seperate POD Network.
 	* 6)Join the worker Node to Master Node.
 
-PODS
-    [image](https://user-images.githubusercontent.com/30715707/70859899-6882ec00-1f40-11ea-8700-ba9108ec4edb.png)
+## PODS
+    
+  ![image](https://user-images.githubusercontent.com/30715707/70859899-6882ec00-1f40-11ea-8700-ba9108ec4edb.png)
+   
    * Kubernetes does not deploy container directly on POD.
    * Containers are encapsulated into Kubernetes Object called POD.
    * POD is single instance of the applicatio.
    * We can't deploy same container inside pod but however we can deploy multiple different container in same POD.
-	kubectl
-				<kubectl run nginx --image nginx> ->Create a POD with nginx container.
-				<kubectl get pods>  -> To get list of pods
-				<kubectl get pods>  -> To get list of pods two additional values like POD Internal IP and Node.
-				<kubectl get nodes> -> To view all the nodes that are part of the cluster.
-				<kubectl describe pods> -> To View Details of the POD like Namespace,nodes,Image ID,Restart Count.
+    
+## kubectl
+   * <kubectl run nginx --image nginx> ->Create a POD with nginx container.
+   * <kubectl get pods>  -> To get list of pods
+   * <kubectl get pods>  -> To get list of pods two additional values like POD Internal IP and Node.
+   * <kubectl get nodes> -> To view all the nodes that are part of the cluster.
+   * <kubectl describe pods> -> To View Details of the POD like Namespace,nodes,Image ID,Restart Count.
       
-	YAML
-		4 Top level Fields
-			apiVersion:
-			Kind:
-			metadata:
-			spec:
+## YAML
+   * 4 Top level Fields
+   * apiVersion:
+   * Kind:
+   * metadata:
+   * spec:
