--- a/K8.md
+++ b/K8.md
@@ -43,8 +43,10 @@
    * <kubectl describe pods> -> To View Details of the POD like Namespace,nodes,Image ID,Restart Count.
       
 ## YAML
+   ![image](https://user-images.githubusercontent.com/30715707/70966907-b15eb000-20ba-11ea-91eb-2443daab1b9c.png)
+   
    * 4 Top level Fields
-   * apiVersion:
-   * Kind:
-   * metadata:
-   * spec:
+   * apiVersion: v1,app/v1	
+   * Kind: POD,Servie,Replica Set,Deployments.
+   * metadata: It represent meta data of pods like name and label.
+   * spec: It contain information about container like name & image. 
