--- a/K8.md
+++ b/K8.md
@@ -32,7 +32,7 @@
 ## PODS
    * Kubernetes does not deploy container directly on POD.
    * Containers are encapsulated into Kubernetes Object called POD.
-   * POD is single instance of the applicatio.
+   * POD is single instance of the application.
    * We can't deploy same container inside pod but however we can deploy multiple different container in same POD.
     
 ## kubectl
