--- a/K8.md
+++ b/K8.md
@@ -50,3 +50,7 @@
      * Kind: POD,Servie,Replica Set,Deployments.
      * metadata: It represent meta data of pods like name and label.
      * spec: It contain information about container like name & image. 
+ 
+  * Tips & Tricks
+     * https://plugins.jetbrains.com/plugin/9354-kubernetes-and-openshift-resource-support/ ->Download this plugin and import in pycharm to write yaml file with ease.s
+     * www.yamllint.com ->we can paste any yaml file content in this site to valide the format.
