--- a/K8.md
+++ b/K8.md
@@ -52,5 +52,5 @@
      * spec: It contain information about container like name & image. 
  
   * Tips & Tricks
-     * https://plugins.jetbrains.com/plugin/9354-kubernetes-and-openshift-resource-support/ ->Download this plugin and import in pycharm to write yaml file with ease.s
+     * https://plugins.jetbrains.com/plugin/9354-kubernetes-and-openshift-resource-support/ ->Download this plugin and import in pycharm to write yaml file with ease.
      * www.yamllint.com ->we can paste any yaml file content in this site to valide the format.
