--- a/K8.md
+++ b/K8.md
@@ -14,8 +14,7 @@
     * Scheduler - It is used to distribute containers across the Nodes.
     * Controller- It is the Brain behind orchestration and responsible for Noticing Node/Containers goes down and make decision to bring up the new container.
     * kubectl - It is used to Manage application to Kubeneters Cluster. Cluster information,Node Status.
-       * kubectl get nodes
-       * kubelet cluster-info
+ 
 
 ## Installation	
    * Utility:-
@@ -38,9 +37,14 @@
 ## kubectl
    *  kubectl run nginx --image nginx ->Create a POD with nginx container.
    *  kubectl get pods  ->To get list of pods
-   *  kubectl get pods  ->To get list of pods two additional values like POD Internal IP and Node.
+   *  kubectl get pods -o wide ->To get list of pods two additional values like POD Internal IP and Node.
    *  kubectl get nodes ->To view all the nodes that are part of the cluster.
    *  kubectl describe pods ->To View Details of the POD like Namespace,nodes,Image ID,Restart Count.
+   *  kubelet cluster-info ->To get information about the cluster.
+   *  kubectl describe pods ->To View Details of the POD like Namespace,nodes,Image ID,Restart Count.
+   *  kubectl create -f test.yaml ->Create POD using Definition File
+   *  kubectl pods edit test.yaml ->To edit the config of the existing POD in the yaml file
+   *  kubectl apply test.yaml  ->Apply a configuration to a resource by filename or stdin.
       
 ## YAML
    ![image](https://user-images.githubusercontent.com/30715707/70966907-b15eb000-20ba-11ea-91eb-2443daab1b9c.png)
@@ -54,3 +58,23 @@
   * Tips & Tricks
      * https://plugins.jetbrains.com/plugin/9354-kubernetes-and-openshift-resource-support/ ->Download this plugin and import in pycharm to write yaml file with ease.
      * www.yamllint.com ->we can paste any yaml file content in this site to valide the format.
+
+## Replication Controller/Replica Set
+   * Replication Controller is heart of the Kubernetes which is used to run reaplica of same POD across the cluster for HA,Load Balancing and Scaling.
+   * Yaml Definition File
+	1)Version
+	2)Kind
+	3)MetaData
+	4)Spec
+	   * template
+	   * replicas
+	   * selector
+	      * Selector is used to specific which POD in the Cluster needs to be part of the replicate.
+	      * The Main difference between Replication Controller and Replica Set is Selector field.
+   * Commands
+	* kubectk create -f replicaeset-Definition.yaml
+	* kubectl get replicationcontroller
+	* kubectl get replicaset
+	* kubectl delete replicateset <Replicateset Name>
+	* kubectl replacte -f replicaeset-Definition.yaml
+	* kubectl scale -replicas=6 -f replicaeset-Definition.yaml
