--- a/K8.md
+++ b/K8.md
@@ -72,9 +72,10 @@
 	      * Selector is used to specific which POD in the Cluster needs to be part of the replicate.
 	      * The Main difference between Replication Controller and Replica Set is Selector field.
    * Commands
-	* kubectk create -f replicaeset-Definition.yaml
-	* kubectl get replicationcontroller
-	* kubectl get replicaset
-	* kubectl delete replicateset <Replicateset Name>
-	* kubectl replacte -f replicaeset-Definition.yaml
-	* kubectl scale -replicas=6 -f replicaeset-Definition.yaml
+    ![ReplicationSetCommands](https://user-images.githubusercontent.com/30715707/71318525-fff3bc00-24b7-11ea-88af-f31e86aa5edb.PNG)
+          * kubectk create -f replicaeset-Definition.yaml
+	  * kubectl get replicationcontroller
+	  * kubectl get replicaset
+	  * kubectl delete replicateset <Replicateset Name>
+	  * kubectl replacte -f replicaeset-Definition.yaml
+	  * kubectl scale -replicas=6 -f replicaeset-Definition.yaml
