--- a/K8.md
+++ b/K8.md
@@ -41,10 +41,11 @@
    *  kubectl get nodes ->To view all the nodes that are part of the cluster.
    *  kubectl describe pods ->To View Details of the POD like Namespace,nodes,Image ID,Restart Count.
    *  kubelet cluster-info ->To get information about the cluster.
-   *  kubectl describe pods ->To View Details of the POD like Namespace,nodes,Image ID,Restart Count.
    *  kubectl create -f test.yaml ->Create POD using Definition File
    *  kubectl pods edit test.yaml ->To edit the config of the existing POD in the yaml file
    *  kubectl apply test.yaml  ->Apply a configuration to a resource by filename or stdin.
+   *  kubectl get all -> To list POD,Replica Set, Deployment.
+   
       
 ## YAML
    ![image](https://user-images.githubusercontent.com/30715707/70966907-b15eb000-20ba-11ea-91eb-2443daab1b9c.png)
@@ -79,3 +80,16 @@
 	  * kubectl delete replicateset <Replicateset Name>
 	  * kubectl replacte -f replicaeset-Definition.yaml
 	  * kubectl scale -replicas=6 -f replicaeset-Definition.yaml
+	
+## Deployment
+  * Deployment provides us the ability to upgrade the containter/POD/ReplicaSet on rolling update easily.
+ 	* kubectl create -f deployment.definition.yaml
+ 	* kubectl rollout status deployment/myapp-deployment.
+	kubectl rollout history deployment/myapp-deployment.
+	kubectl rollout undo deployment/myapp-deployment.
+	kubectl delete deployment myapp-deployment.
+	kubectl apply -f deployment-definition.yaml --record=true
+	Deployment Stragegy
+	  Recreate
+	  Rolling Update
+		  Each POD Creation will create deployment and replication and version also be recorded. We can roll back to the version any time using undo command.
