--- a/K8.md
+++ b/K8.md
@@ -85,10 +85,10 @@
   * Deployment provides us the ability to upgrade the containter/POD/ReplicaSet on rolling update easily.
  	* kubectl create -f deployment.definition.yaml
  	* kubectl rollout status deployment/myapp-deployment.
-	kubectl rollout history deployment/myapp-deployment.
-	kubectl rollout undo deployment/myapp-deployment.
-	kubectl delete deployment myapp-deployment.
-	kubectl apply -f deployment-definition.yaml --record=true
+	* kubectl rollout history deployment/myapp-deployment.
+	* kubectl rollout undo deployment/myapp-deployment.
+	* kubectl delete deployment myapp-deployment.
+	* kubectl apply -f deployment-definition.yaml --record=true
 	Deployment Stragegy
 	  Recreate
 	  Rolling Update
