--- a/K8.md
+++ b/K8.md
@@ -80,6 +80,7 @@
 	  * kubectl delete replicateset <Replicateset Name>
 	  * kubectl replacte -f replicaeset-Definition.yaml
 	  * kubectl scale -replicas=6 -f replicaeset-Definition.yaml
+  	  * kubectl set image deployment myapp-deployment nginx-container=nginx:1.9.1
 	
 ## Deployment
   * Deployment provides us the ability to upgrade the containter/POD/ReplicaSet on rolling update easily.
@@ -93,3 +94,18 @@
 	  Recreate
 	  Rolling Update
 		  Each POD Creation will create deployment and replication and version also be recorded. We can roll back to the version any time using undo command.
+## Networking
+ * IP address is always assigned to each POD in Kubernetes.
+ * Each Kubernetes Cluster setup will have internal Private POD Network.
+ * All Container/PODS can communicate to one another without NAT.
+ * All nodes can communicate with all container and vice-versa without NAT.
+ 
+## Services
+ * Services is object in Kubernetes which is used to access the Application  that is running inside the container using the Node IP.
+ * Service provides the ability to define which port on container maps to which part on the Host.		
+     * NodePort: Range 30000 - 32767
+     * ClusterIP
+     * Load Balancer
+     * kubectl get servies
+     
+## MicroServices:
