--- a/K8.md
+++ b/K8.md
@@ -83,6 +83,7 @@
   	  * kubectl set image deployment myapp-deployment nginx-container=nginx:1.9.1
 	
 ## Deployment
+ ![Deployment](https://user-images.githubusercontent.com/30715707/71567905-aa876280-2ae8-11ea-870b-b0b88487ef93.PNG)
   * Deployment provides us the ability to upgrade the containter/POD/ReplicaSet on rolling update easily.
  	* kubectl create -f deployment.definition.yaml
  	* kubectl rollout status deployment/myapp-deployment.
@@ -101,9 +102,11 @@
  * All nodes can communicate with all container and vice-versa without NAT.
  
 ## Services
- * Services is object in Kubernetes which is used to access the Application  that is running inside the container using the Node IP.
- * Service provides the ability to define which port on container maps to which part on the Host.		
-     * NodePort: Range 30000 - 32767
+![Services](https://user-images.githubusercontent.com/30715707/71567910-ba06ab80-2ae8-11ea-83c3-9490d3469bda.png)
+ * Services is object in Kubernetes which is used to access the Application externally that is running inside the container using the Node IP.
+ * Service provides the ability to define which port on container maps to which part on the Host.
+ * Service is also used to link the POD in Kubernetes Cluster.
+      * NodePort: Range 30000 - 32767
      * ClusterIP
      * Load Balancer
      * kubectl get servies
