--- a/K8.md
+++ b/K8.md
@@ -70,7 +70,7 @@
 	   * template
 	   * replicas
 	   * selector
-	      * Selector is used to specific which POD in the Cluster needs to be part of the replicate.
+	      * Selector is used to specific which POD in the Cluster needs to be part of the replica.
 	      * The Main difference between Replication Controller and Replica Set is Selector field.
    * Commands
     ![ReplicationSetCommands](https://user-images.githubusercontent.com/30715707/71318525-fff3bc00-24b7-11ea-88af-f31e86aa5edb.PNG)
